After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677493 - Bad looking vertical resize
Bad looking vertical resize
Status: RESOLVED FIXED
Product: clutter-gtk
Classification: Platform
Component: GtkClutterEmbed
unspecified
Other Linux
: Normal normal
: ---
Assigned To: clutter-gtk maintainer(s)
clutter-gtk maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-06-05 17:12 UTC by Alexander Larsson
Modified: 2012-08-09 12:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Make GtkClutterEmbed redraw resizes nicer (1.71 KB, patch)
2012-06-05 17:13 UTC, Alexander Larsson
committed Details | Review

Description Alexander Larsson 2012-06-05 17:12:51 UTC
Resizing GtkClutterEmbed vertically temporarily shows the drawing in the wrong position. This is due to Gtk+ drawing after a resize before we have gotten back the ConfigureNotify so that cogl knows the right new framebuffer size.
Comment 1 Alexander Larsson 2012-06-05 17:13:06 UTC
Created attachment 215661 [details] [review]
Make GtkClutterEmbed redraw resizes nicer

Currently when you vertically resize a GtkClutterEmbed we draw twice, once
with the old window size and once again when the ConfigureNotify gets
back with the right size. The first draw is at the wrong position due
to the wrong window height used to calculate the viewport position.

We fix this by immediately telling cogl about the new size by faking
a ConfigureNotify event.
Comment 2 Emmanuele Bassi (:ebassi) 2012-06-05 17:50:24 UTC
Comment on attachment 215661 [details] [review]
Make GtkClutterEmbed redraw resizes nicer

pushed to master
Comment 3 Fabian Henze 2012-08-09 12:11:01 UTC
Any chance to get this in a bugfix release of clutter-gtk 1.2.x? This is really irritating behaviour.
Comment 4 Emmanuele Bassi (:ebassi) 2012-08-09 12:14:38 UTC
yes, I'll spin a clutter-gtk 1.2.2, with this fix, soon.